--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,7 @@
   "C_Cpp.intelliSenseEngine": "default",
   "idf.espIdfPathWin": "C:\\Users\\Feuerstein\\esp\\v5.4.3\\esp-idf",
   "idf.pythonInstallPath": "C:\\Users\\Feuerstein\\.espressif\\tools\\idf-python\\3.11.2\\python.exe",
-  "idf.openOcdConfigs": [
-    "board/esp32c3-builtin.cfg"
-  ],
+  "idf.openOcdConfigs": ["board/esp32c3-builtin.cfg"],
   "idf.portWin": "COM9",
   "idf.toolsPathWin": "C:\\Users\\Feuerstein\\.espressif",
   "idf.customExtraVars": {
@@ -15,5 +13,10 @@
     "--background-index",
     "--query-driver=C:\\Users\\Feuerstein\\.espressif\\tools\\riscv32-esp-elf\\esp-14.2.0_20250730\\riscv32-esp-elf\\bin\\riscv32-esp-elf-gcc.exe",
     "--compile-commands-dir=${workspaceFolder}\\build"
-  ]
+  ],
+  "files.associations": {
+    "esp_wifi.h": "c",
+    "esp_netif.h": "c"
+  },
+  "idf.flashType": "UART"
 }
