--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,15 @@
   ],
   "files.associations": {
     "esp_wifi.h": "c",
-    "esp_netif.h": "c"
+    "esp_netif.h": "c",
+    "nvs_flash.h": "c",
+    "freertos.h": "c",
+    "esp_log.h": "c",
+    "esp_http_server.h": "c",
+    "task.h": "c",
+    "wifi_manager.h": "c",
+    "string.h": "c",
+    "sdkconfig.h": "c"
   },
   "idf.flashType": "UART"
 }
