--- a/components/httpd_manager/CMakeLists.txt
+++ b/components/httpd_manager/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "httpd_manager.c"
                        INCLUDE_DIRS "include"
-                       REQUIRES esp_http_server uart_manager)
+                       REQUIRES esp_http_server uart_manager i2c_manager)
