--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
     "sdkconfig.h": "c",
     "uart_manager.h": "c"
   },
-  "idf.flashType": "JTAG"
+  "idf.flashType": "JTAG",
+  "idf.currentSetup": "C:\\Users\\Feuerstein\\esp\\v5.4.3\\esp-idf"
 }
